fixing contrast

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -100,7 +100,7 @@ section:nth-child(5) a, section:nth-child(5) h2{
       
     border-radius: 2px;
     
-    background-color: #2CE080;
+    background-color: #0B6538;
      
     color: #FFF;
     text-decoration: none;
@@ -115,7 +115,7 @@ section:nth-child(5) a, section:nth-child(5) h2{
     padding: 9px 13px;
     border: 2px solid #3A4649;
     background-color: transparent;
-    color: #F00;
+    color: #B30000;
   }
   
   .cookie-consent-banner__cta:hover {
